Add Chapter 3 Section 1: analysis of the index creation.

--- a/TeXerei/literatur/bib.bib
+++ b/TeXerei/literatur/bib.bib
@@ -6,12 +6,19 @@
         howpublished = {\url{http://holumbus.fh-wedel.de/trac}}
 }
 
+@misc{hayoo,
+        howpublished = {\url{http://holumbus.fh-wedel.de/hayoo/hayoo.html}}
+}
+
 @misc{currydoc,
         howpublished = {\url{http://www-ps.informatik.uni-kiel.de/currywiki/tools/currydoc}}
 }
 
-@misc{currydoc2,
-        howpublished = {\url{http://www.informatik.uni-kiel.de/~mh/papers/WFLP02_Doc.pdf}}
+@TECHREPORT{currydoc2,
+    author = {Michael Hanus},
+    title = {CurryDoc: A Documentation Tool for Declarative Programs},
+    institution = {University of Udine},
+    year = {2002}
 }
 
 @misc{javadoc,
