--- a/TeXerei/bachelor.tex
+++ b/TeXerei/bachelor.tex
@@ -998,7 +998,7 @@ structure.
 \>[13]{}(\Conid{TCons}\;(\Conid{Prelude},[\mskip1.5mu \mskip1.5mu])\;[\mskip1.5mu (\Conid{TCons}\;(\Conid{Prelude},\Conid{Char}))\mskip1.5mu])\mskip1.5mu]{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
-\caption{The representation of \emph{Maybe Int String} as \ensuremath{\Conid{TypeExpr}}}
+\caption{The representation of \ensuremath{\Conid{Maybe}\;\Conid{Int}\;\Conid{String}} as \ensuremath{\Conid{TypeExpr}}}
 \end{figure}
 \begin{figure}[h!]
 \begin{hscode}\SaveRestoreHook
@@ -1007,7 +1007,7 @@ structure.
 \>[B]{}\Conid{FuncType}\;(\Conid{TCons}\;(\Conid{Prelude},\Conid{IO})\;[\mskip1.5mu \Conid{TVar}\;\mathrm{97}\mskip1.5mu])\;(\Conid{TCons}\;(\Conid{Prelude},\Conid{IO}){}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
-\caption{The representation of \emph{IO a -> IO a} as \ensuremath{\Conid{TypeExpr}}}
+\caption{The representation of \ensuremath{\Conid{IO}\;\Varid{a}\to \Conid{IO}\;\Varid{a}} as \ensuremath{\Conid{TypeExpr}}}
 \end{figure}
 \begin{figure}[h!]
 \begin{hscode}\SaveRestoreHook
@@ -1020,59 +1020,8 @@ structure.
 \>[3]{}(\Conid{TCons}\;(\Conid{Prelude},\Conid{Int})\;[\mskip1.5mu \mskip1.5mu])){}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
-\caption{The representation of \emph{Bool -> Int -> Int} as \ensuremath{\Conid{TypeExpr}}}
+\caption{The representation of \ensuremath{\Conid{Bool}\to \Conid{Int}\to \Conid{Int}} as \ensuremath{\Conid{TypeExpr}}}
 \end{figure}
-
-% CurryDoc uses the meta-programming language FlatCurry to gain an
-% intermediate data structure. We can use this data structure for our
-% purposes. But at first, we have to discuss the which information to
-% provide in our data structures. We already introduced \emph{CurryInfo}
-% as structure for a Curry module in the
-% \hyperref[preliminaries:currydoc:curryInfo]{previous chapter}.
-% As next step we want to describe the information this data
-% structure holds. The information about a module covers its name,
-% author and description.
-
-% Thanks to FlatCurry, we get quite more details about functions and
-% types. Besides basic information like the name, description and the
-% corresponding module, we have access to function characteristics like
-% its flexible or rigid status and non- or deterministic property. In addition
-% FlatCurry provides a data structure |TypeExpr| to describe type
-% signatures (see \hyperref[fig:typeExpr]{Figure \ref{fig:typeExpr}}),
-% which we use in both data structures. All described data structures to
-% provide a representation for a Curry module can be seen in
-% \hyperref[fig:curryInfo]{Figure \ref{fig:curryInfo}}.
-
-% \begin{figure}[h]
-% \begin{code}
-% -- || The CurryInfo data holds information about the module, and
-% --  corresponding  functions, data and type declaration of a given 
-% --  Curry module.
-% data CurryInfo = 
-%   CurryInfo ModuleInfo [FunctionInfo] [TypeInfo]
-
-
-% -- || ModuleInfo holds information about the name, author,
-% --    and the description of a given module.
-% data ModuleInfo = 
-%   ModuleInfo String String String
-
-% -- || FunctionInfo holds information about the name, signature, corresponding 
-% -- module, description and flexible/rigid status of a function and 
-% -- its non-/deterministic behaviour.
-% data FunctionInfo = 
-%   FunctionInfo String (QName, TypeExpr) String String Bool
-%   FlexRigidResult
-
-% -- || TypeInfo holds information about the name, signature, type variables,
-% -- corresponding module, and description of a given type.
-% data TypeInfo = 
-%   TypeInfo String [(QName, [TypeExpr])] [Int] String String
-% \end{code}
-% \caption{The data structures for a Curry module}
-% \label{fig:curryInfo}
-% \end{figure}
-
 
 % What do we need to create an index that can be used for the Curry
 % search engine?\\
@@ -1381,56 +1330,143 @@ application for the search engine.
 
 \section{CurryDoc extension}\label{implementation:currydoc}
 
-Present the general structure of the \ensuremath{\Conid{CurryInfo}} data and the
-sub-structures \ensuremath{\Conid{ModuleInfo}}, \ensuremath{\Conid{FunctionInfo}} and \ensuremath{\Conid{TypeInfo}}.
+In the previous chapter we discussed the general idea of an extension
+of CurryDoc to generate a data structure. Later this data structure serves
+as source for the index creation. In this section we take a look at
+the implementation of this extension.\\
 
-\begin{hscode}\SaveRestoreHook
-\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
-\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
-\>[B]{}\mathbf{data}\;\Conid{CurryInfo}\mathrel{=}\Conid{CurryInfo}\;\Conid{ModuleInfo}\;[\mskip1.5mu \Conid{FunctionInfo}\mskip1.5mu]\;[\mskip1.5mu \Conid{TypeInfo}\mskip1.5mu]{}\<[E]%
-\ColumnHook
-\end{hscode}\resethooks
+% Present the general structure of the |CurryInfo| data and the
+% sub-structures |ModuleInfo|, |FunctionInfo| and |TypeInfo|.
+Since CurryDoc is written in Curry, we implemented our extension in
+Curry as well. With this decision we stand to benefit from already implemented
+functionalities and on the other hand, this simplifies the integration of our
+implementation with the current CurryDoc version.\\
 
-The name, author and description is the interesting information that
-is exported. 
-\begin{hscode}\SaveRestoreHook
-\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
-\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
-\>[B]{}\mathbf{data}\;\Conid{ModuleInfo}\mathrel{=}\Conid{ModuleInfo}\;\Conid{String}\;\Conid{String}\;\Conid{String}\;[\mskip1.5mu \Conid{String}\mskip1.5mu]\;\Conid{String}{}\<[E]%
-\ColumnHook
-\end{hscode}\resethooks
+CurryDoc uses the meta-programming language FlatCurry to gain an
+intermediate data structure. We can use this data structure for our
+purposes. Additionally, we can use other functions provided by
+CurryDoc, that are already implemented. For example, CurryDoc supports
+a special comment syntax to annotate the author and version of a
+module. Furthermore the arguments and the return value of a function
+can be described as well as general descriptions.
 
-The model contains the name, signature, module, and description of a function
-and extra information about the non-/determinism and flexible/rigid status.
+But at first, we discuss which information we want to provide in our
+data structures. We already introduced \emph{CurryInfo} as structure
+for a Curry program in the
+\hyperref[preliminaries:currydoc:curryInfo]{second chapter}.  As next
+step we want to describe \ensuremath{\Conid{ModuleInfo}}, \ensuremath{\Conid{FunctionInfo}} and \ensuremath{\Conid{TypeInfo}},
+since they are a part of the \ensuremath{\Conid{CurryInfo}} data structure. You can take
+a look at these data structures and their definitions in advance in
+\hyperref[fig:curryInfo]{Figure \ref{fig:curryInfo}}.
 
-\begin{hscode}\SaveRestoreHook
-\column{B}{@{}>{\hspre}l<{\hspost}@{}}%
-\column{3}{@{}>{\hspre}l<{\hspost}@{}}%
-\column{E}{@{}>{\hspre}l<{\hspost}@{}}%
-\>[B]{}\mathbf{data}\;\Conid{FunctionInfo}\mathrel{=}\Conid{FunctionInfo}\;\Conid{String}\;(\Conid{QName},\Conid{TypeExpr})\;\Conid{String}{}\<[E]%
-\\
-\>[B]{}\hsindent{3}{}\<[3]%
-\>[3]{}\Conid{String}\;\Conid{Bool}\;\Conid{FlexRigidResult}{}\<[E]%
-\ColumnHook
-\end{hscode}\resethooks
-
-The TypeInfo includes the name, signature, list of type variables,
-module, and description.
+\begin{figure}[h]
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{3}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
-\>[B]{}\mathbf{data}\;\Conid{TypeInfo}\mathrel{=}\Conid{TypeInfo}\;\Conid{String}\;[\mskip1.5mu (\Conid{QName},[\mskip1.5mu \Conid{TypeExpr}\mskip1.5mu])\mskip1.5mu]\;[\mskip1.5mu \Conid{TVarIndex}\mskip1.5mu]{}\<[E]%
+\>[B]{}\mbox{\onelinecomment  | The CurryInfo data holds information about the module, and}{}\<[E]%
+\\
+\>[B]{}\mbox{\onelinecomment   corresponding  functions, data and type declaration of a given }{}\<[E]%
+\\
+\>[B]{}\mbox{\onelinecomment   Curry module.}{}\<[E]%
+\\
+\>[B]{}\mathbf{data}\;\Conid{CurryInfo}\mathrel{=}{}\<[E]%
 \\
 \>[B]{}\hsindent{3}{}\<[3]%
-\>[3]{}\Conid{String}\;\Conid{String}{}\<[E]%
+\>[3]{}\Conid{CurryInfo}\;\Conid{ModuleInfo}\;[\mskip1.5mu \Conid{FunctionInfo}\mskip1.5mu]\;[\mskip1.5mu \Conid{TypeInfo}\mskip1.5mu]{}\<[E]%
+\\
+\>[B]{}\newline{}\<[E]%
+\\
+\>[B]{}\mbox{\onelinecomment  | ModuleInfo holds information about the name, author,}{}\<[E]%
+\\
+\>[B]{}\mbox{\onelinecomment     and the description of a given module.}{}\<[E]%
+\\
+\>[B]{}\mathbf{data}\;\Conid{ModuleInfo}\mathrel{=}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}\Conid{ModuleInfo}\;\Conid{String}\;\Conid{String}\;\Conid{String}{}\<[E]%
+\\
+\>[B]{}\newline{}\<[E]%
+\\
+\>[B]{}\mbox{\onelinecomment  | FunctionInfo holds information about the name, signature, corresponding }{}\<[E]%
+\\
+\>[B]{}\mbox{\onelinecomment  module, description and flexible/rigid status of a function and }{}\<[E]%
+\\
+\>[B]{}\mbox{\onelinecomment  its non-/deterministic behaviour.}{}\<[E]%
+\\
+\>[B]{}\mathbf{data}\;\Conid{FunctionInfo}\mathrel{=}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}\Conid{FunctionInfo}\;\Conid{String}\;(\Conid{QName},\Conid{TypeExpr})\;\Conid{String}\;\Conid{String}\;\Conid{Bool}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}\Conid{FlexRigidResult}{}\<[E]%
+\\
+\>[B]{}\newline{}\<[E]%
+\\
+\>[B]{}\mbox{\onelinecomment  | TypeInfo holds information about the name, signature, type variables,}{}\<[E]%
+\\
+\>[B]{}\mbox{\onelinecomment  corresponding module, and description of a given type.}{}\<[E]%
+\\
+\>[B]{}\mathbf{data}\;\Conid{TypeInfo}\mathrel{=}{}\<[E]%
+\\
+\>[B]{}\hsindent{3}{}\<[3]%
+\>[3]{}\Conid{TypeInfo}\;\Conid{String}\;[\mskip1.5mu (\Conid{QName},[\mskip1.5mu \Conid{TypeExpr}\mskip1.5mu])\mskip1.5mu]\;[\mskip1.5mu \Conid{Int}\mskip1.5mu]\;\Conid{String}\;\Conid{String}{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
+\caption{The data structures for a Curry module}
+\label{fig:curryInfo}
+\end{figure}
 
-Explain how this extension is used in the CurryDoc tool. 
+Like the name suggests, \ensuremath{\Conid{ModuleInfo}} represents the data corresponding
+to a Curry module. The main information about a module consists of its
+name, author and description. We can also provide the version number
+of the implementation or the imported modules, but we decided against
+it. The latter seems to be useless information for the search engine,
+since the Curry modules are highly interrelated. This results in a
+great number of hits, when searching for a module, since every
+correlating module will be shown as well. Furthermore we think the
+version number is not a significant characteristic for a
+module. Therefor we decided to focus on the three mentioned proporties
+only.
 
-The same data structure is used on the Haskell side that implements
-the search engine.
+\ensuremath{\Conid{FunctionInfo}} consists of characteristics for a given function. It
+holds the function's name and description. Additionally we decide to
+add the corresponding module to provide a connection between the
+function and its module. This decision is based on the cause that we
+do not keep the \ensuremath{\Conid{CurryInfo}} data structure as whole for the index
+construction, but the three arguments consisting of the list of
+functions, the list of types and the module information. Thanks to
+FlatCurry we can access function characteristics like nondeterminism
+and determinism, along with the information if a given function is
+rigid or flexible. Since these are important characteristics to differ
+between Curry functions, \ensuremath{\Conid{FunctionInfo}} stores these information as
+property. In addition FlatCurry provides a data structure \ensuremath{\Conid{TypeExpr}}
+to describe type signatures (see \hyperref[fig:typeExpr]{last
+  chapter}). We use this signatures as part of the \ensuremath{\Conid{FunctionInfo}} data
+structure. 
+
+The data structure for types looks quite similar to
+\ensuremath{\Conid{FunctionInfo}}. \ensuremath{\Conid{TypeInfo}} consists of a type's name, description and
+corresponding module. FlatCurry provides us with information about the
+type constructors and their type signature. Therefor we store a list
+of \ensuremath{\Conid{TypeExpr}} in our structure. Additionally \ensuremath{\Conid{TypeInfo}} holds a list
+of integer to represent possible type variables. This corresponds to
+the definition of\ensuremath{\Conid{TypeExpr}}, where type variables are represented as
+integer as well. \\
+
+In the end, we feed the \ensuremath{\Conid{CurryInfo}} data structure with the specific
+module, function and type information of a given Curry program and our
+CurryDoc extension writes the data structure into a
+\emph{.cdoc}-file. The final CurryDoc version allows to mechanism to
+generate the \ensuremath{\Conid{CurryInfo}} structure. You can generate the
+\emph{.cdoc}-file only or you initiate the HTML generation, where the
+\emph{.cdoc}-file is also part of the output. In
+\hyperref[a:currydoc]{Appendix \ref{a:currydoc}} we provide further
+instruction for the usage of CurryDoc.
+
+% The same data structure is used on the Haskell side that implements
+% the search engine.
 
 \section{Indexing}\label{implementation:index}
 
@@ -1518,14 +1554,14 @@ resulting type.
 \ColumnHook
 \end{hscode}\resethooks
 
-Explain the operator \ensuremath{(\mathbin{<|>})} that applies two parsers and concats the
+Explain the operator \ensuremath{(\rotatebox[origin=c]{90}{$\ominus$})} that applies two parsers and concats the
 parsing results.  
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
-\>[B]{}(\mathbin{<|>})\mathbin{::}\Conid{Parser}\;\Varid{s}\;\Varid{a}\to \Conid{Parser}\;\Varid{s}\;\Varid{a}\to \Conid{Parser}\;\Varid{s}\;\Varid{a}{}\<[E]%
+\>[B]{}(\rotatebox[origin=c]{90}{$\ominus$})\mathbin{::}\Conid{Parser}\;\Varid{s}\;\Varid{a}\to \Conid{Parser}\;\Varid{s}\;\Varid{a}\to \Conid{Parser}\;\Varid{s}\;\Varid{a}{}\<[E]%
 \\
-\>[B]{}\Varid{p}\mathbin{<|>}\Varid{q}\mathrel{=}(\lambda \Varid{ts}\to \Varid{p}\;\Varid{ts}\plus \Varid{q}\;\Varid{ts}){}\<[E]%
+\>[B]{}\Varid{p}~\rotatebox[origin=c]{90}{$\ominus$}~\Varid{q}\mathrel{=}(\lambda \Varid{ts}\to \Varid{p}\;\Varid{ts}\plus \Varid{q}\;\Varid{ts}){}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
 
@@ -1543,12 +1579,12 @@ bind operator.
 Now show that a function has to be applied, to use the binding operator.
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
-\column{12}{@{}>{\hspre}l<{\hspost}@{}}%
+\column{14}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
-\>[B]{}(\mathbin{<\$>})\mathbin{::}(\Varid{a}\to \Varid{b})\to \Conid{Parser}\;\Varid{s}\;\Varid{a}\to \Conid{Parser}\;\Varid{s}\;\Varid{b}{}\<[E]%
+\>[B]{}(\circledS)\mathbin{::}(\Varid{a}\to \Varid{b})\to \Conid{Parser}\;\Varid{s}\;\Varid{a}\to \Conid{Parser}\;\Varid{s}\;\Varid{b}{}\<[E]%
 \\
-\>[B]{}\Varid{f}\mathbin{<\$>}\Varid{p}\mathrel{=}{}\<[12]%
-\>[12]{}\lambda \Varid{ts}\to [\mskip1.5mu (\Varid{f}\;\Varid{x},\Varid{ts}_{1})\mid (\Varid{x},\Varid{ts}_{1})\leftarrow \Varid{p}\;\Varid{ts}\mskip1.5mu]{}\<[E]%
+\>[B]{}\Varid{f}~\circledS~\Varid{p}\mathrel{=}{}\<[14]%
+\>[14]{}\lambda \Varid{ts}\to [\mskip1.5mu (\Varid{f}\;\Varid{x},\Varid{ts}_{1})\mid (\Varid{x},\Varid{ts}_{1})\leftarrow \Varid{p}\;\Varid{ts}\mskip1.5mu]{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
 
@@ -1574,7 +1610,7 @@ Present a simple example that can parse a given character.
 \end{hscode}\resethooks
 
 Present the concept by writing a parser for expressions with or without
-parentheses using \ensuremath{\mathbin{<|>}} and \ensuremath{\circledast}. 
+parentheses using \ensuremath{\rotatebox[origin=c]{90}{$\ominus$}} and \ensuremath{\circledast}. 
 
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
@@ -1621,22 +1657,12 @@ parentheses using \ensuremath{\mathbin{<|>}} and \ensuremath{\circledast}.
 \>[5]{}((\mathbin{\char92 \char95 }\Varid{expr}\;\anonymous \to \Varid{expr}){}\<[E]%
 \\
 \>[5]{}\hsindent{2}{}\<[7]%
-\>[7]{}\mathbin{<\$>}\Varid{parseOpenParenthesis}\circledast\Varid{parseExpression}\circledast\Varid{parseCloseParenthesis}){}\<[E]%
+\>[7]{}~\circledS~\Varid{parseOpenParenthesis}\circledast\Varid{parseExpression}\circledast\Varid{parseCloseParenthesis}){}\<[E]%
 \\
 \>[B]{}\hsindent{5}{}\<[5]%
-\>[5]{}\mathbin{<|>}\Varid{parseExpression}{}\<[E]%
+\>[5]{}~\rotatebox[origin=c]{90}{$\ominus$}~\Varid{parseExpression}{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
-
-Mention that the used type in the implementation correlates to \ensuremath{\Conid{Parser}\;\Conid{String}\;\Conid{TypeExpr}} (which is already used for the data exchange) for
-signatures and \ensuremath{\Conid{Parser}\;\Conid{String}\;\Conid{Query}} (which is provided by the Holumbus framework) for the end
-result. 
-
-% Explain that in most cases, a combination of more search words is
-% desirable, because first popular search engines like Google\texttrademark~use this
-% feature so it's common knowledge (the user expects this features) and
-% second it's easier to search for more search words, if the desired
-% result is still vague.
 
 Give a definition of the language (EBNF(?) / appendix). 
 
@@ -1673,33 +1699,6 @@ Give a definition of the language (EBNF(?) / appendix).
 \ColumnHook
 \end{hscode}\resethooks
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% The actual use case of the search engine is to search for a given query.
-
-% For the user, it's important that the search engine understands her
-% query. For this cause, the user is obliged to use a specific language
-% that can be interpreted unambiguously.
-
-% To simplify the usage of the search engine, Curr(y)gle\texttrademark
-% provides a language to restrict the search to a specific
-% context. This feature not only simplifies the use, but results in a better
-% user-experience.
-
-% (Example) Let's assume you want to search for the module Map. Without
-% the restriction to modules, there are numerous results, because map is
-% a very common name (as it is associated with higher-order functions)
-% in functional languages. Thanks to the feature to search for specific
-% contexts, you can search for the query \emph{:module map} instead,
-% where \emph{:module} indicates the context of modules.
-
-% Curr(y)gle \texttrademark supports to search explicitly for modules,
-% functions, types and signatures. In addition to that, it allows
-% to search for functions with a given characteristic, like
-% non-deterministic, flexible and rigid functions.
-
-% As the number of the supported features increases, the query gets more
-% complex to parse. 
-
 \section{Web application}
 \chapter{Conclusion}\label{conclusion}
 \section{Summary and Results}
@@ -1707,16 +1706,18 @@ Give a definition of the language (EBNF(?) / appendix).
 
 % Setze Numerierung wieder auf römisch zurück und setzte von oben fort
 % Wert ist demnach der von 'roemisch'
-% \newpage
-% \pagenumbering{Roman}
-% \setcounter{page}{\value{roemisch}}
+\newpage
+\pagenumbering{Roman}
+\setcounter{page}{\value{roemisch}}
+
+% Appendix, falls vorhanden
+\appendix
+\chapter{CurryDoc Instruction}\label{a:currydoc}
+
+\chapter{User-Query Syntax}\label{a:syntax}
 
 % Literaturverzeichnis
 \bibliography{literatur/bib}
-
-% Appendix, falls vorhanden
-% \appendix
-% \input{extras/anhang}
 
 % Eidesstattliche Erklärung
 % \input{extras/eidesstattliche}
